# batch-spec

./: .coveragerc  .gitattributes  .gitignore  .pylintrc  README.md  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
audit/cmd-help/: break-help.txt  call-help.txt  chcp-help.txt  choice-help.txt  doskey-help.txt  exit-help.txt  for-help.txt  forfiles-help.txt  goto-help.txt  help-help.txt  if-help.txt  more-help.txt  robocopy-help.txt  set-help.txt  setlocal-help.txt  shift-help.txt  sort-help.txt
conformance/: run_parser.py
corpus/parse/amp-and-chain-valid/: expect.json  input.cmd
corpus/parse/amp-pipe-chain-valid/: expect.json  input.cmd
corpus/parse/amp-trailing-block-invalid/: expect.json  input.cmd
corpus/parse/and-or-precedence-valid/: expect.json  input.cmd
corpus/parse/apostrophe-in-arg-valid/: expect.json  input.cmd
corpus/parse/assoc-ext-valid/: expect.json  input.cmd
corpus/parse/at-prefix-valid/: expect.json  input.cmd
corpus/parse/backtick-in-arg-valid/: expect.json  input.cmd
corpus/parse/bang-caret-escape-valid/: expect.json  input.cmd
corpus/parse/bang-digit-leading-valid/: expect.json  input.cmd
data/: commands.yaml  expansion.yaml
docs/: commands-catalog.md  expansion.md  parse-corpus.md
grammar/: BatchLexer.g4  BatchParser.g4
schema/: commands.schema.json  expansion.schema.json  parse-expect.schema.json
scripts/: _paths.py  generate_parser.py  validate.py  verify.py
tests/: conftest.py  test_conformance.py  test_tooling.py  test_verify.py
(+704 files in other folders)
