[project]
name = "batch-spec"
requires-python = ">=3.12"

[tool.black]
line-length = 88
target-version = ["py312", "py313", "py314"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
py_version = 312
src_paths = ["scripts", "conformance", "tests"]

[tool.pip-audit]
requirement = [
    "requirements.txt",
    "requirements-dev.txt",
]